WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89698
-webkit-flex-flow shouldn't be an enumerable property of the computed style
https://bugs.webkit.org/show_bug.cgi?id=89698
Summary
-webkit-flex-flow shouldn't be an enumerable property of the computed style
Tony Chang
Reported
2012-06-21 15:44:30 PDT
-webkit-flex-flow shouldn't be an enumerable property of the computed style
Attachments
Patch
(8.06 KB, patch)
2012-06-21 15:47 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-06-21 15:47:36 PDT
Created
attachment 148905
[details]
Patch
Tony Chang
Comment 2
2012-06-21 15:48:26 PDT
I noticed this while implementing -webkit-flex as a shorthand. No rush to fix.
WebKit Review Bot
Comment 3
2012-06-22 08:21:06 PDT
Comment on
attachment 148905
[details]
Patch Clearing flags on attachment: 148905 Committed
r121026
: <
http://trac.webkit.org/changeset/121026
>
WebKit Review Bot
Comment 4
2012-06-22 08:21:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug