-webkit-flex-flow shouldn't be an enumerable property of the computed style https://bugs.webkit.org/show_bug.cgi?id=89698

Reviewed by Ojan Vafai.

Source/WebCore:

flex-flow is a shorthand for flex-direction and flex-wrap:
http://dev.w3.org/csswg/css3-flexbox/#flex-flow-property
Shorthand properties should not be enumerable in the computed style, although you can still
get the value from the computed style.

Tests: css3/flexbox/css-properties.html: New test case added.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore):

LayoutTests:

* css3/flexbox/css-properties-expected.txt:
* css3/flexbox/css-properties.html:
* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* fast/css/getComputedStyle/resources/property-names.js:
* svg/css/getComputedStyle-basic-expected.txt:


Canonical link: https://commits.webkit.org/107609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121026 268f45cc-cd09-0410-ab3c-d52691b4dbfc